Fix button spacing

--- a/var/www/html/css/style.css
+++ b/var/www/html/css/style.css
@@ -5,8 +5,9 @@
 }
 
 body {
-	background: #f6f5f7;
+	background: #fff;
 	align-items: center;
+	justify-content: center;
 	margin:0px;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
@@ -48,7 +49,7 @@ button {
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
-	padding: 12px 45px;
+	padding: 12px 20px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
@@ -106,6 +107,13 @@ header{
 	justify-content: space-between;
 }
 
+.button-wrapper{
+	display:flex;
+	flex-direction:row;
+	gap: 3em;
+	padding: 5px;
+}
+
 .wrapper{
 	width: 90%;
 	margin: 0 auto;
@@ -132,12 +140,19 @@ header{
 	min-height: 480px;
 }
 
+.dashboard{
+	display:flex;
+	justify-content: center;
+	margin-left: 30px;
+	flex-direction: column;
+}
+
 .dashboard-container {
-	left: 0;
-	width: 100%;
+	padding-top: 10px;
 	margin-bottom: 20px;
-	z-index: 2;
 	background-color: #fff;
+	max-width: 1000px;
+	justify-self: center;
 }
 
 .form-container {
